--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -4,9 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
-      - development
-      - 'releases/*'
+      - main
 
 jobs:
   qodana:
