--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ yarn_mappings=1.19.3+build.5
 loader_version=0.14.12
 
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.1
 maven_group=com.sxtanna.mc
 archives_base_name=keybind-presets
 
