--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,15 @@
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.12
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.2
+loader_version=0.14.19
 
 # Mod Properties
-mod_version=1.1
+mod_version=1.2
 maven_group=com.sxtanna.mc
 archives_base_name=keybind-presets
 
 # Dependencies
-fabric_version=0.70.0+1.19.3
+fabric_version=0.79.0+1.19.4
